git helpers, log level INFO

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ export BUILD_CONTAINER=1
 export PULL_CONTAINER=0
 export CONTAINER_TAG="devel"
 export CONTAINER_BRANCH="devel"
-export LOG_LEVEL="DEBUG"
+export LOG_LEVEL="INFO"
 
